# clementine

./: .dockerignore  .env.example  .gitignore  .gitmodules  CHANGELOG.md  COPYING  Cargo.toml  Dockerfile  Makefile  README.md  REPRODUCIBLE_BUILDS.md  SECURITY.md  cd  codespell_ignore.txt  crates.js  docker-compose.yaml  docker-compose.yml  example.env  flake.nix  help.html  index.html  out.txt  output.txt  pg_hba.conf  profile.pb  run.sh  rust-toolchain.toml  search-index.js  settings.html  src-files.js  test.sh
bridge-circuit-host/: Cargo.toml  output.txt
bridge-circuit-host/build-files/: bridge_circuit_build.dockerfile  work_only_build.dockerfile
bridge-circuit-host/host/: Cargo.toml
bridge-circuit-host/host/src/: lib.rs  main.rs
bridge-circuit-host/src/: bridge_circuit_host.rs  config.rs  docker.rs  lib.rs  main.rs  mock_zkvm.rs  structs.rs  utils.rs
circuits/: Cargo.toml
circuits-lib/: Cargo.toml
circuits-lib/bridge-circuit/: Cargo.toml
circuits-lib/bridge-circuit/src/: constants.rs  groth16.rs  lc_proof.rs  lib.rs  storage_proof.rs
circuits-lib/core/: Cargo.toml
circuits-lib/core/src/: groth16.rs  lib.rs  winternitz.rs  zkvm.rs
circuits-lib/src/: lib.rs
circuits-lib/src/bridge_circuit/: bridge_circuit.rs  constants.rs  groth16.rs  groth16_verifier.rs  lc_proof.rs  merkle_tree.rs  mod.rs  spv.rs  storage_proof.rs  structs.rs  transaction.rs  winternitz.rs
circuits-lib/src/bridge_circuit_common/: groth16.rs  winternitz.rs
circuits-lib/src/bridge_circuit_core/: groth16.rs  mod.rs  structs.rs  winternitz.rs
circuits-lib/src/common/: constants.rs  hashes.rs  mod.rs  utils.rs  zkvm.rs
circuits-lib/src/header_chain/: header_chain.rs  jmt_guest.rs  mmr_guest.rs  mmr_native.rs  mod.rs
circuits-lib/src/operator/: mod.rs
circuits-lib/src/watchtower/: mod.rs
circuits-lib/src/work_only/: mod.rs  work_only.rs
circuits-lib/work-only/: Cargo.toml
circuits-lib/work-only/src/: lib.rs
circuits/core/: Cargo.toml
circuits/core/src/: config.rs  core_tx.rs  incremental_merkle.rs  lib.rs  tx.rs  utils.rs  vector.rs
circuits/host/: Cargo.toml
circuits/host/data/: block_verbose_1.json  block_verbose_2.json
circuits/host/src/: bitcoin.rs  core_tests.rs  core_tx_utils.rs  lib.rs  main.rs  merkle.rs  rpc.rs  utils.rs
circuits/methods/: Cargo.toml
circuits/methods/guest/: Cargo.toml
circuits/operator/: Cargo.toml
circuits/operator/guest/: Cargo.toml
circuits/src/: bitcoin.rs  bridge.rs  constants.rs  env.rs  hashes.rs  incremental_merkle.rs
circuits/verifier/: Cargo.toml
cli/: Cargo.toml
cli/src/: aggregator.rs  citrea.rs  main.rs  operator.rs  verifier.rs
cli/src/utils/: bitcoin_merkle.rs  mod.rs  parameters.rs  requests.rs
core/: Cargo.toml  build.rs  database
core/benches/: deposit.rs
core/src/: actor.rs  aggregator.rs  bitcoin_syncer.rs  bitvm_client.rs  btc.rs  chain_prover.rs  citrea.rs  cli.rs  compatibility.rs  config.rs  constants.rs  deposit.rs  encryption.rs  env_writer.rs  errors.rs  extended_bitcoin_rpc.rs  extended_rpc.rs  finalized_block_fetcher.rs  hashes.rs  header_chain_prover.rs  incremental_merkle.rs  keys.rs  lib.rs  main.rs  merkle.rs  metrics.rs  mock_db.rs  mock_env.rs  mock_macro.rs  musig.rs  musig2.rs  operator.rs  operator_auth.rs  pool.rs  script_builder.rs  servers.rs  test_common.rs  test_utils.rs  testkit.rs  transaction_builder.rs  (+9 more)
core/src/builder/: address.rs  block_cache.rs  citrea.rs  mod.rs  script.rs  sighash.rs  transaction.rs  winternitz.rs
core/src/citrea/: Bridge.json  lcp.rs  mock.rs  mod.rs  rpc_types.rs
core/src/config/: env.rs  mod.rs  paramset.rs  protocol.rs  protocol_paramset.toml  test.rs
core/src/database/: aggregator.rs  bitcoin_syncer.rs  chain_proof.rs  chain_sycner.rs  common.rs  finalized_block_fetcher.rs  header_chain_prover.rs  mod.rs  operator.rs  pgmq.sql  rocks_db.rs  schema.sql  state_machine.rs  test.rs  tx_sender.rs  verifier.rs  watchtower.rs  wrapper.rs
core/src/db/: common.rs  common_db.rs  mod.rs  operator.rs  operator_db.rs  postgresql.rs  schema.sql  text.rs  verifier.rs  verifier_db.rs
core/src/header_chain_prover/: blockgazer.rs  mod.rs  prover.rs
core/src/itest/: misc.rs  mod.rs  musig2.rs  rpc.rs  taproot.rs
core/src/mock/: bitcoin_simulator.rs  common.rs  database.rs  env.rs  mod.rs  rpc.rs
core/src/protocol/: create.rs  ids.rs  mod.rs  spec.rs
core/src/rpc/: aggregator.rs  clementine.proto  clementine.rs  ecdsa_verification_sig.rs  error.rs  interceptors.rs  mod.rs  operator.rs  verifier.rs  watchtower.rs  wrapper.rs
core/src/states/: block_cache.rs  context.rs  event.rs  kickoff.rs  matcher.rs  mod.rs  round.rs  syncer.rs  task.rs
core/src/task/: aggregator_metric_publisher.rs  entity_metric_publisher.rs  lcp_syncer.rs  manager.rs  metric_publisher.rs  mod.rs  payout_checker.rs  status_monitor.rs  sync_status.rs  tests.rs  (+1 more)
core/tests/: bitvm.rs  common.rs  deposit.rs  flow.rs  full_flow.rs  misc.rs  musig2.rs  rpc.rs  taproot.rs  withdrawal.rs
crates/clementine-errors/: Cargo.toml
crates/clementine-extended-rpc/: Cargo.toml
crates/clementine-primitives/: Cargo.toml
crates/clementine-tx-sender/: .env.txsender  Cargo.toml  Dockerfile  run.sh
crates/clementine-tx-sender-jsonrpc-client/: Cargo.toml
crates/clementine-tx-sender-types/: Cargo.toml
crates/clementine-utils/: Cargo.toml
crates/tx-builder/: Cargo.toml
crates/tx-sender-jsonrpc-client/: Cargo.toml
host/: Cargo.toml
host/data/: block.json  example.json  example_tx.json  getblock.json  rpc.json  simplest.json  simpletx.json
host/src/: core_tests.rs  lib.rs  main.rs  merkle.rs  utils.rs
methods/guest/: Cargo.toml
operator/: Cargo.toml
operator/src/: actor.rs  bitcoin_merkle.rs  bitvm_instance.rs  circuit_tests.rs  config.rs  constant.rs  constants.rs  custom_merkle.rs  db.rs  env_writer.rs  errors.rs  extended_rpc.rs  giga_merkle.rs  lib.rs  lightclient.rs  main.rs  merkle.rs  mock_db.rs  mock_env.rs  operator.rs  script_builder.rs  shared.rs  transaction_builder.rs  transactions.rs  user.rs  utils.rs  verifier.rs
risc0-circuits/core/: Cargo.toml
(+2264 files in other folders)
