[workspace]
resolver = "2"
members = [
  "core",
  "risc0-circuits/work-only",
  "risc0-circuits/bridge-circuit",
  "bridge-circuit-host/host"
] # Add "risc0-circuits/operator", "risc0-circuits/watchtower" later

[workspace.dependencies]
hex = "0.4.3"
lazy_static = { version = "1.5.0", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = "1.0.128"
thiserror = "1.0.64"
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["json"] }
jsonrpsee = { version = "0.22.5", default-features = false }
async-trait = "0.1.83"
clap = "4.5.20"
toml = "0.8.19"
sqlx = { version = "0.7.4", default-features = false }
serial_test = "3.2.0"
tempfile = "3.16.0"
bitvm = { git = "https://github.com/chainwayxyz/BitVM", branch = "algebra-sync-0.4.0" }

#Ark deps
ark-ff = { git = "https://github.com/chainwayxyz/algebra/", branch = "ozan/sync-0.4.0" }
ark-ec = { git = "https://github.com/chainwayxyz/algebra/", branch = "ozan/sync-0.4.0" }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", branch = "releases" }
ark-bn254 = { git = "https://github.com/arkworks-rs/curves/", branch = "releases" }
ark-serialize = { git = "https://github.com/chainwayxyz/algebra/", branch = "ozan/sync-0.4.0" }
ark-std = { version = "0.4.0", default-features = false, features = ["print-trace"] }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives", branch = "releases", features = ["snark", "sponge"] }
ark-relations = "0.4.0"
ark-poly = { git = "https://github.com/chainwayxyz/algebra/", branch = "ozan/sync-0.4.0" }

# bitcoin
bitcoin = { version = "0.32.5", features = ["serde"] }
bitcoincore-rpc = "0.18.0"
secp256k1 = { version = "0.30.0", features = [
  "serde",
  "rand",
  "std",
  "global-context",
] }
bitcoin-script = { git = "https://github.com/BitVM/rust-bitcoin-script" }

# async + gRPC
tonic = { version = "0.12.3", features = ["tls"] }
prost = "0.13.3"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
futures = "0.3.31"
async-stream = "0.3.6"
futures-util = "0.3.31"
futures-core = "0.3.31"

# Circuits
sha2 = { version = "=0.10.8", default-features = false }
crypto-bigint = { version = "=0.5.5", features = ["rand_core"] }
borsh = { version = "1.5.1", features = ["derive"] }
k256 = { version = "=0.13.3", default-features = false }
header-chain = { git = "https://github.com/chainwayxyz/risc0-to-bitvm2", rev = "a233e27" }
risc0-build = "1.2"
risc0-zkvm = { version = "1.2" }

[patch.crates-io]
bitcoincore-rpc = { version = "0.18.0", git = "https://github.com/chainwayxyz/rust-bitcoincore-rpc.git", rev = "9f1e8c9" }
secp256k1 = { git = "https://github.com/jlest01/rust-secp256k1", rev = "1cc7410df436b73d06db3c8ff7cbb29a78916b06" }
ark-ff = { git = "https://github.com/chainwayxyz/algebra/", branch = "ozan/sync-0.4.0" }
ark-ec = { git = "https://github.com/chainwayxyz/algebra/", branch = "ozan/sync-0.4.0" }
ark-poly = { git = "https://github.com/chainwayxyz/algebra/", branch = "ozan/sync-0.4.0" }
ark-serialize = { git = "https://github.com/chainwayxyz/algebra/", branch = "ozan/sync-0.4.0" }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std/" }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives/" }
ark-relations = { git = "https://github.com/arkworks-rs/snark/" }
ark-snark = { git = "https://github.com/arkworks-rs/snark/" }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", branch = "releases" }

[profile.release]
lto = true
strip = true
codegen-units = 1
# TODO: Abort on panic can be enabled to save binary space. But needs a proper
# error management infrastructure to not lose crash report.
# panic = "abort"
