[workspace]
resolver = "2"
members = [
  "core",
  "circuits-lib",
  "risc0-circuits/bridge-circuit",
  "risc0-circuits/work-only",
  "bridge-circuit-host"
] # Add "risc0-circuits/operator", "risc0-circuits/watchtower" later

[workspace.dependencies]
hex = "0.4.3"
lazy_static = { version = "1.5.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["json"] }
jsonrpsee = { version = "0.24.2", default-features = false }
async-trait = "0.1.83"
clap = "4.5.20"
toml = "0.8.19"
sqlx = { version = "0.8.3", default-features = false }
serial_test = "3.2.0"
tempfile = "3.16.0"
eyre = { version = "0.6.12" }
alloy = { version = "0.11.1", features = ["full"] }
statig = { version = "0.3.0", features = ["async", "serde"] }
pgmq = "0.30.0"
serde_with = "3.12.0"
rand_chacha = "0.3.1"

# Citrea dependencies
citrea-e2e = { git = "https://github.com/chainwayxyz/citrea-e2e", rev = "d1ba171" }
sov-rollup-interface = { git = "https://github.com/chainwayxyz/citrea.git", rev = "ccdbd5a96" }

# bitcoin
bitcoin = { version = "0.32.5", features = ["serde"] }
bitcoincore-rpc = "0.18.0"
secp256k1 = { version = "0.30.0", features = [
  "serde",
  "rand",
  "std",
  "global-context",
] }
bitcoin-script = { git = "https://github.com/BitVM/rust-bitcoin-script" }

# async + gRPC
tonic = { version = "0.12.3", features = ["tls"] }
prost = "0.13.3"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
futures = "0.3.31"
async-stream = "0.3.6"
futures-util = "0.3.31"
futures-core = "0.3.31"
http = "^1"
hyper = "^1"
tower = "^0.4"
hyper-util = { version = "0.1" }

# Circuits
sha2 = { version = "=0.10.8", default-features = false }
crypto-bigint = { version = "=0.5.5", features = ["rand_core"] }
borsh = { version = "1.5.1", features = ["derive"] }
k256 = { version = "=0.13.3", default-features = false }
risc0-build = "1.2"
risc0-zkvm = { version = "1.2" }
ripemd = "0.1.3"
once_cell = "1.10.0"
jmt = "0.11.0"
derive_more = "1.0.0"
blake3 = "1.5.1"
itertools = "0.14.0"
header-chain = { git = "https://github.com/chainwayxyz/BitVM", rev = "8508328" }
bitvm = { git = "https://github.com/chainwayxyz/BitVM", rev = "8508328" }
final-spv = { git = "https://github.com/chainwayxyz/BitVM", rev = "8508328" }
risc0-to-bitvm2-core = { git = "https://github.com/chainwayxyz/risc0-to-bitvm2.git", branch = "main" }

ark-groth16 = { version = "0.5.0", default-features = false }
ark-serialize = "0.5.0"
ark-bn254 = { version = "0.5.0", features = ["curve", "scalar_field"], default-features = false }

# Bridge Circuit Host
risc0-circuit-recursion = "1.2.5"
risc0-zkp = "1.2.5"
risc0-groth16 = "1.2.5"

ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-std = "0.5.0"
ark-crypto-primitives = "0.5.0"
ark-relations = "0.5.0"

alloy-rpc-types = "0.11.1"
alloy-primitives = "0.8.7"
alloy-rpc-types-eth = "0.11.1"
alloy-rpc-client = "0.11.1"

rand = "0.8"
num-bigint = "0.4.6"
num-traits = "0.2.19"
bincode = "1.3.3"
hex-literal = "0.4.1"

[patch.crates-io]
bitcoincore-rpc = { version = "0.18.0", git = "https://github.com/chainwayxyz/rust-bitcoincore-rpc.git", rev = "44f9bba" }
secp256k1 = { git = "https://github.com/jlest01/rust-secp256k1", rev = "1cc7410df436b73d06db3c8ff7cbb29a78916b06" }

[profile.release]
lto = true
strip = true
codegen-units = 1
# TODO: Abort on panic can be enabled to save binary space. But needs a proper
# error management infrastructure to not lose crash report.
# panic = "abort"
