[package]
name = "bridge-circuit-host"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "=1.2.4", features = ["metal", "bonsai", "client", "prove"]}
risc0-circuit-recursion = "=1.2.4"
risc0-zkp = "1.2.4"
risc0-groth16 = { version = "=1.2.4", default-features=false }
ark-bn254 = "=0.4.0"
ark-ff = "=0.4.0"
ark-ec = "=0.4.0"
ark-std = "=0.4.0"
ark-crypto-primitives = "=0.4.0"
ark-serialize = "=0.4.0"
ark-relations = "=0.4.0"
ark-groth16 = "=0.4.0"
serde = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
circuits-lib = { path = "../circuits-lib", features = ["not_patched"] }
header-chain = { git="https://github.com/chainwayxyz/risc0-to-bitvm2.git", rev="a233e27" }
final-spv = { git="https://github.com/chainwayxyz/risc0-to-bitvm2.git", rev="a233e27" }
borsh = {version = "1.5.3", features = ["derive"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
anyhow = "1.0"
bitcoin = { version = "0.32.0", features = ["serde"] }
alloy = {version = "0.1", features = ["provider-http", "serde"]}
alloy-rpc-types = { version = "0.11.1" }
alloy-primitives = { version = "0.6", features = ["serde"] }
serde_json = "1.0.138"
tokio = {version = "1.43.0", features = ["rt-multi-thread"]}
bincode = "1.3.3"
hex = "0.4.3"
alloy-rpc-types-eth = { version = "0.11.1", features = ["serde"] } 
hex-literal = "0.4.1"
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["json", "std", "env-filter"] }
thiserror = "2.0.11"

[features]
metal = ["risc0-zkvm/metal"]
