[package]
name = "bridge-circuit-host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { workspace = true, features = ["metal", "bonsai", "client", "prove"] }
risc0-circuit-recursion = { workspace = true }
risc0-zkp = { workspace = true }
risc0-groth16 = { workspace = true, default-features=false }

ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
ark-crypto-primitives = { workspace = true }
ark-serialize = { workspace = true }
ark-relations = { workspace = true }
ark-groth16 = { workspace = true }

alloy = { workspace = true, features = ["provider-http", "serde"]}
alloy-rpc-types = { workspace = true }
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-rpc-types-eth = { workspace = true, features = ["serde"] } 
alloy-rpc-client = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
borsh = { workspace = true, features = ["derive"] }
num-bigint = { workspace = true }
num-traits = { workspace = true }
anyhow = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }

tokio = { workspace = true, features = ["rt-multi-thread"]}
bincode = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
tracing = { workspace = true, default-features = false }
tracing-subscriber = { workspace = true, features = ["json", "std", "env-filter"] }
thiserror = { workspace = true }

circuits-lib = { path = "../circuits-lib", features = ["not_patched"] }

risc0-to-bitvm2-core = { git="https://github.com/chainwayxyz/risc0-to-bitvm2.git", branch = "main" } # remove later



[features]
metal = ["risc0-zkvm/metal"]
