[package]
name = "circuits-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true, default-features = false }
risc0-zkvm = {version = "1.2.0", default-features = false, features = ["std"]}
borsh = {version = "1.5.3", features = ["derive"] }
