[package]
name = "circuits-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = { version = "=0.10.8", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
lazy_static = { version = "1.5.0", default-features = false, features = ["spin_no_std"] }
tracing = { version = "0.1.40", default-features = false }
risc0-zkvm = { version = "=1.2.5", default-features = false, features = ["std"] }
borsh = {version = "1.5.3", features = ["derive"] }
risc0-groth16 = { version = "=1.2.5" }
bitcoin = { version = "0.32.5", features = ["rand-std", "serde"] }
rand = { version = "0.8", features = ["small_rng"] }
ripemd = "0.1.3"
ark-bn254 = "=0.4.0"
ark-ff = "=0.4.0"
ark-ec = "=0.4.0"
ark-std = "=0.4.0"
ark-crypto-primitives = "=0.4.0"
ark-serialize = "=0.4.0"
ark-relations = "=0.4.0"
ark-groth16 = { version = "=0.4.0", default-features = false }
num-bigint = "0.4.6"
num-traits = "0.2.19"
hex = "0.4.3"
once_cell = "1.10.0"
hex-literal = "0.4.1"
risc0-to-bitvm2-core = { git = "https://github.com/chainwayxyz/risc0-to-bitvm2.git", branch = "main" }
jmt = "0.11.0"
alloy-primitives = { version = "0.8.7", features = ["serde"] }
alloy-rpc-types = "0.11.1"
alloy-serde = { version = "0.4.2", default-features = false }
serde_json = "1.0.138"
bincode = "1.3.3"
alloy-rpc-types-eth = { version = "0.11.1", features = ["serde"] }
derive_more = {version = "1.0.0", default-features= false, features = ["display"]} 
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
tracing-subscriber = { version = "0.3.18", features = ["json"] }
blake3 = "1.5.1"
itertools = "0.14.0"

[features]
not_patched = []
