[package]
name = "clementine-circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto-bigint = {version="=0.5.2", default-features = false}
k256 = { version = "=0.13.1", features = ["arithmetic", "serde", "expose-field", "ecdsa"], default_features = false }
sha2 = {version="=0.10.6", default-features = false}
serde = { version = "1.0", default-features = false, features = ["derive"] }
lazy_static = {version="1.4.0", default-features = false, features = ["spin_no_std"]}
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false }
