[package]
name = "clementine-circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto-bigint = {version="=0.5.5", default-features = false}
k256 = { version = "=0.13.3", features = ["arithmetic", "serde", "expose-field", "ecdsa"], default_features = false }
sha2 = {version="=0.10.8", default-features = false}
serde = { version = "1.0", default-features = false, features = ["derive"] }
lazy_static = {version="1.4.0", default-features = false, features = ["spin_no_std"]}
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2/v0.10.8-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.0"  }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }