[package]
name = "clementine-circuits"
version = "0.0.0"
edition = "2021"

[dependencies]
crypto-bigint = { workspace = true }
k256 = { workspace = true, features = ["arithmetic", "serde", "expose-field", "ecdsa"] }
sha2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
lazy_static = { workspace = true, features = ["spin_no_std"] }
tracing = { workspace = true, default-features = false }
