[package]
name = "cli"
version = "0.0.0"
edition = "2021"

[dependencies]
circuits-lib = { path = "../circuits-lib" }
clementine-core = { path = "../core" }
bitcoin = { workspace = true }
clap = { workspace = true }
bitcoincore-rpc = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
eyre = { workspace = true }
alloy = { workspace = true }
jsonrpsee = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
secrecy = { workspace = true }
