[package]
name = "clementine-core"
version = "0.2.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.12"

[dependencies]
bitcoin = { workspace = true, features = ["rand", "bitcoinconsensus"] }
bitcoincore-rpc = { workspace = true }
hex = { workspace = true, features = ["serde"] }
lazy_static = { workspace = true, features = ["spin_no_std"] }
sha2 = { workspace = true }
risc0-zkvm = { version = "1.2.4", features = [ "prove" ] }
serde = { workspace = true }
serde_json = { workspace = true }
secp256k1 = { workspace = true, features = ["serde", "rand", "std"] }
crypto-bigint = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["full"] }
jsonrpsee = { workspace = true, features = ["http-client"] }
async-trait = { workspace = true }
futures = { workspace = true }
clap = { workspace = true, features = ["derive"] }
toml = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "macros"] }
risc0-to-bitvm2-core = { workspace = true }
borsh = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
futures-core = { workspace = true }
bitvm = { git = "https://github.com/chainwayxyz/BitVM", rev = "fc9cdd4" }
tempfile = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
bitcoin-script = { workspace = true }

[features]
default = []

[[bin]]
name = "server"
path = "src/bin/server.rs"

[lints.clippy]
unwrap_used = { level = "deny" }
