[package]
name = "clementine-core"
version = "0.2.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.12"

[dependencies]
bitcoin = { workspace = true, features = ["rand", "bitcoinconsensus"] }
bitcoincore-rpc = { workspace = true }
hex = { workspace = true, features = ["serde"] }
lazy_static = { workspace = true, features = ["spin_no_std"] }
sha2 = { workspace = true }
risc0-zkvm = { version = "=1.2.5", features = [ "prove" ] }
serde = { workspace = true }
serde_json = { workspace = true }
secp256k1 = { workspace = true, features = ["serde", "rand", "std"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["full"] }
jsonrpsee = { workspace = true, features = ["http-client", "macros"] }
async-trait = { workspace = true }
futures = { workspace = true }
clap = { workspace = true, features = ["derive"] }
toml = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "macros"] }
risc0-to-bitvm2-core = { workspace = true }
borsh = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
futures-core = { workspace = true }
bitvm = { workspace = true}
tempfile = { workspace = true }
eyre = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
hyper-util = { workspace = true }
alloy = { workspace = true }
ark-groth16 = { workspace = true, features = ["default"]}
ark-bn254 = { workspace = true }
ark-serialize = { workspace = true }
statig = { workspace = true, features = ["async", "serde"] }
pgmq = { workspace = true }
serde_with = { workspace = true }
sov-rollup-interface = { workspace = true, features = ["native"] }
rand_chacha = { workspace = true }
bridge-circuit-host = { path = "../bridge-circuit-host" }
circuits-lib = { path = "../circuits-lib" }
bincode = { workspace = true }
ark-ff = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
bitcoin-script = { workspace = true }
citrea-e2e = { workspace = true }
base64 = { workspace = true }

[[bin]]
name = "clementine-cli"
path = "src/bin/cli.rs"


[lints.clippy]
unwrap_used = { level = "deny" }
