[package]
name = "operator"
version = "0.1.0"
edition = "2021"

[dependencies]
circuit-helpers = {path = "../helpers"}
# operator-circuit = {path = "../circuits/operator"}
bitcoin = { version = "0.31.0", features = ["rand", "bitcoinconsensus"] }
bitcoincore-rpc = "0.18.0"
hex = "0.4.3"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
lazy_static = {version="1.4.0", default-features = false, features = ["spin_no_std"]}
sha2 = "=0.10.6"
risc0-zkvm = { version = "0.19.1" }
serde = "1.0"
serde_json = "1.0.108"
byteorder = "1.5.0"
secp256k1 = "0.28.1"
crypto-bigint = {version="=0.5.2"}
thiserror = "1.0.57"
