[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.2.3", features = ["metal"]}
# ark-bn254 = "=0.4.0"
# ark-ff = "=0.4.2"
# ark-ec = "=0.4.2"
# ark-std = "=0.4.0"
# ark-crypto-primitives = "=0.4.0"
# ark-serialize = "=0.4.2"
# ark-relations = "=0.4.0"
# ark-groth16 = "=0.4.0"
serde = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
bridge-circuit-core = { path = "../../circuits-lib/core" }
header-chain = { git="https://github.com/chainwayxyz/risc0-to-bitvm2.git", rev="a233e27" }
final-spv = { git="https://github.com/chainwayxyz/risc0-to-bitvm2.git", rev="a233e27" }
borsh = {version = "1.5.3", features = ["derive"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
risc0-groth16 = "1.2.3"
anyhow = "1.0"
bitcoin = { version = "0.32.0", features = ["serde"] }
alloy = {version = "0.1", features = ["provider-http", "serde"]}
alloy-rpc-types = { version = "0.11.1" }
alloy-primitives = { version = "0.6", features = ["serde"] }
serde_json = "1.0.138"
tokio = {version = "1.43.0", features = ["rt-multi-thread"]}
bincode = "1.3.3"
hex = "0.4.3"
alloy-rpc-types-eth = { version = "0.11.1", features = ["serde"] } 
hex-literal = "0.4.1"
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["json", "std", "env-filter"] }

[features]
metal = ["risc0-zkvm/metal"]
