[package]
name = "bridge-circuit-lib"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.2.3", default-features = false, features = ['std'] }
bridge-circuit-core = { path = "../core" }
serde = "1.0"
bitcoin = { version = "0.32.5", features = ["rand-std"] }
hex-literal = "0.4.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"
ark-ff = "0.4.0"
ark-bn254 = "0.4.0"
sha2 =  { version = "0.10.8", default-features = false }
crypto-bigint = { version = "0.5.5", default-features = false }
hex = "0.4.3"
ark-groth16 = { version = "0.4.0", default-features = false }
ark-std = "0.4.0"
ark-serialize = "0.4.0"
ark-ec = "0.4.0"
jmt = "0.11.0"
borsh = "1.5.5"
alloy-primitives = { version = "0.8.7", features = ["serde"] }
alloy-rpc-types = "0.11.1"
alloy-serde = { version = "0.4.2", default-features = false }
serde_json = "1.0.138"
bincode = "1.3.3"
alloy-rpc-types-eth = { version = "0.11.1", features = ["serde"] } 

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }