[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
bridge-methods = { path = "../methods" }
bridge-core = { path = "../core" }
risc0-zkvm = { version = "0.19.1" }
env_logger = "0.10"
serde = "1.0"
hex = "0.4.3"
serde_json = "1.0.108"
crypto-bigint = {version="=0.5.2", default-features = false}
bitcoin = {version="0.31.0"}
dotenv = "0.15.0"
reqwest = {version = "0.11.23", features = ["json"]}
tokio = { version = "1", features = ["full"] }