[package]
name = "clementine-tx-sender-jsonrpc-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true

[features]
default = []
# Citrea-only helpers.
citrea = ["clementine-tx-sender-types/citrea"]
# Clementine tx-sender helpers (insert_try_to_send) and its dependencies.
clementine = [
  "dep:bitcoin",
  "clementine-tx-sender-types/clementine",
]

[dependencies]
jsonrpsee = { workspace = true, features = ["client", "http-client"] }
clementine-tx-sender-types = { path = "../clementine-tx-sender-types", default-features = false }
bitcoin = { workspace = true, optional = true }
